parser/y.output

state 0
	$accept: .start $end 

	exec  shift 16
	fdisk  shift 19
	mount  shift 14
	mkfs  shift 20
	mkdisk  shift 17
	pause  shift 21
	rmdisk  shift 18
	unmount  shift 15
	rep  shift 23
	read  shift 22
	.  error

	MOUNT  goto 4
	PAUSE  goto 11
	UNMOUNT  goto 5
	EXEC  goto 6
	MKDISK  goto 7
	RMDISK  goto 8
	FDISK  goto 9
	MKFS  goto 10
	INSTRUCTION  goto 3
	INSTRUCTIONS  goto 2
	READ  goto 12
	REP  goto 13
	start  goto 1

state 1
	$accept:  start.$end 

	$end  accept
	.  error


state 2
	start:  INSTRUCTIONS.    (1)
	INSTRUCTIONS:  INSTRUCTIONS.INSTRUCTION 

	exec  shift 16
	fdisk  shift 19
	mount  shift 14
	mkfs  shift 20
	mkdisk  shift 17
	pause  shift 21
	rmdisk  shift 18
	unmount  shift 15
	rep  shift 23
	read  shift 22
	.  reduce 1 (src line 156)

	MOUNT  goto 4
	PAUSE  goto 11
	UNMOUNT  goto 5
	EXEC  goto 6
	MKDISK  goto 7
	RMDISK  goto 8
	FDISK  goto 9
	MKFS  goto 10
	INSTRUCTION  goto 24
	READ  goto 12
	REP  goto 13

state 3
	INSTRUCTIONS:  INSTRUCTION.    (2)

	.  reduce 2 (src line 158)


state 4
	INSTRUCTION:  MOUNT.    (4)

	.  reduce 4 (src line 161)


state 5
	INSTRUCTION:  UNMOUNT.    (5)

	.  reduce 5 (src line 162)


state 6
	INSTRUCTION:  EXEC.    (6)

	.  reduce 6 (src line 163)


state 7
	INSTRUCTION:  MKDISK.    (7)

	.  reduce 7 (src line 164)


state 8
	INSTRUCTION:  RMDISK.    (8)

	.  reduce 8 (src line 165)


state 9
	INSTRUCTION:  FDISK.    (9)

	.  reduce 9 (src line 166)


state 10
	INSTRUCTION:  MKFS.    (10)

	.  reduce 10 (src line 167)


state 11
	INSTRUCTION:  PAUSE.    (11)

	.  reduce 11 (src line 168)


state 12
	INSTRUCTION:  READ.    (12)

	.  reduce 12 (src line 169)


state 13
	INSTRUCTION:  REP.    (13)

	.  reduce 13 (src line 170)


state 14
	MOUNT:  mount.MOUNTO 
	MOUNT:  mount.    (35)

	hyphen  shift 27
	.  reduce 35 (src line 217)

	MOUNTO  goto 25
	MOUNTT  goto 26

state 15
	UNMOUNT:  unmount.UNMOUNTO 

	hyphen  shift 30
	.  error

	UNMOUNTO  goto 28
	UNMOUNTT  goto 29

state 16
	EXEC:  exec.hyphen path arrow route 

	hyphen  shift 31
	.  error


state 17
	MKDISK:  mkdisk.MKDISKO 

	hyphen  shift 34
	.  error

	MKDISKO  goto 32
	MKDISKT  goto 33

state 18
	RMDISK:  rmdisk.hyphen path arrow quote route quote 

	hyphen  shift 35
	.  error


state 19
	FDISK:  fdisk.FDISKO 

	hyphen  shift 38
	.  error

	FDISKO  goto 36
	FDISKT  goto 37

state 20
	MKFS:  mkfs.hyphen id arrow idn 
	MKFS:  mkfs.hyphen id arrow idn hyphen tpe arrow id 

	hyphen  shift 39
	.  error


state 21
	PAUSE:  pause.    (14)

	.  reduce 14 (src line 173)


state 22
	READ:  read.arrow route 

	arrow  shift 40
	.  error


state 23
	REP:  rep.REPO 

	hyphen  shift 43
	.  error

	REPO  goto 41
	REPT  goto 42

state 24
	INSTRUCTIONS:  INSTRUCTIONS INSTRUCTION.    (3)

	.  reduce 3 (src line 159)


state 25
	MOUNT:  mount MOUNTO.    (34)
	MOUNTO:  MOUNTO.MOUNTT EMPTY 

	hyphen  shift 27
	.  reduce 34 (src line 213)

	MOUNTT  goto 44

state 26
	MOUNTO:  MOUNTT.    (36)

	.  reduce 36 (src line 219)


state 27
	MOUNTT:  hyphen.path arrow quote route quote 
	MOUNTT:  hyphen.name arrow id 

	name  shift 46
	path  shift 45
	.  error


state 28
	UNMOUNT:  unmount UNMOUNTO.    (40)
	UNMOUNTO:  UNMOUNTO.UNMOUNTT EMPTY 

	hyphen  shift 30
	.  reduce 40 (src line 225)

	UNMOUNTT  goto 47

state 29
	UNMOUNTO:  UNMOUNTT.    (41)

	.  reduce 41 (src line 230)


state 30
	UNMOUNTT:  hyphen.id arrow id 

	id  shift 48
	.  error


state 31
	EXEC:  exec hyphen.path arrow route 

	path  shift 49
	.  error


state 32
	MKDISK:  mkdisk MKDISKO.    (17)
	MKDISKO:  MKDISKO.MKDISKT EMPTY 

	hyphen  shift 34
	.  reduce 17 (src line 179)

	MKDISKT  goto 50

state 33
	MKDISKO:  MKDISKT.    (18)

	.  reduce 18 (src line 184)


state 34
	MKDISKT:  hyphen.size arrow digit 
	MKDISKT:  hyphen.path arrow route 
	MKDISKT:  hyphen.name arrow diskName 
	MKDISKT:  hyphen.path arrow quote route quote 
	MKDISKT:  hyphen.unit arrow id 

	name  shift 53
	path  shift 52
	size  shift 51
	unit  shift 54
	.  error


state 35
	RMDISK:  rmdisk hyphen.path arrow quote route quote 

	path  shift 55
	.  error


state 36
	FDISK:  fdisk FDISKO.    (44)
	FDISKO:  FDISKO.FDISKT EMPTY 

	hyphen  shift 38
	.  reduce 44 (src line 235)

	FDISKT  goto 56

state 37
	FDISKO:  FDISKT.    (45)

	.  reduce 45 (src line 242)


state 38
	FDISKT:  hyphen.unit arrow id 
	FDISKT:  hyphen.tpe arrow id 
	FDISKT:  hyphen.fit arrow id 
	FDISKT:  hyphen.delete arrow id 
	FDISKT:  hyphen.add arrow digit 
	FDISKT:  hyphen.size arrow digit 
	FDISKT:  hyphen.name arrow id 
	FDISKT:  hyphen.path arrow quote route quote 
	FDISKT:  hyphen.path arrow route 

	add  shift 61
	delete  shift 60
	fit  shift 59
	name  shift 63
	path  shift 64
	size  shift 62
	tpe  shift 58
	unit  shift 57
	.  error


state 39
	MKFS:  mkfs hyphen.id arrow idn 
	MKFS:  mkfs hyphen.id arrow idn hyphen tpe arrow id 

	id  shift 65
	.  error


state 40
	READ:  read arrow.route 

	route  shift 66
	.  error


state 41
	REP:  rep REPO.    (25)
	REPO:  REPO.REPT EMPTY 

	hyphen  shift 43
	.  reduce 25 (src line 195)

	REPT  goto 67

state 42
	REPO:  REPT.    (26)

	.  reduce 26 (src line 200)


state 43
	REPT:  hyphen.id arrow id 
	REPT:  hyphen.name arrow id 
	REPT:  hyphen.path arrow quote route quote 
	REPT:  hyphen.path arrow route 
	REPT:  hyphen.ruta arrow quote route quote 
	REPT:  hyphen.ruta arrow route 

	id  shift 68
	name  shift 69
	path  shift 70
	ruta  shift 71
	.  error


state 44
	MOUNTO:  MOUNTO MOUNTT.EMPTY 
	EMPTY: .    (59)

	.  reduce 59 (src line 266)

	EMPTY  goto 72

state 45
	MOUNTT:  hyphen path.arrow quote route quote 

	arrow  shift 73
	.  error


state 46
	MOUNTT:  hyphen name.arrow id 

	arrow  shift 74
	.  error


state 47
	UNMOUNTO:  UNMOUNTO UNMOUNTT.EMPTY 
	EMPTY: .    (59)

	.  reduce 59 (src line 266)

	EMPTY  goto 75

state 48
	UNMOUNTT:  hyphen id.arrow id 

	arrow  shift 76
	.  error


state 49
	EXEC:  exec hyphen path.arrow route 

	arrow  shift 77
	.  error


state 50
	MKDISKO:  MKDISKO MKDISKT.EMPTY 
	EMPTY: .    (59)

	.  reduce 59 (src line 266)

	EMPTY  goto 78

state 51
	MKDISKT:  hyphen size.arrow digit 

	arrow  shift 79
	.  error


state 52
	MKDISKT:  hyphen path.arrow route 
	MKDISKT:  hyphen path.arrow quote route quote 

	arrow  shift 80
	.  error


state 53
	MKDISKT:  hyphen name.arrow diskName 

	arrow  shift 81
	.  error


state 54
	MKDISKT:  hyphen unit.arrow id 

	arrow  shift 82
	.  error


state 55
	RMDISK:  rmdisk hyphen path.arrow quote route quote 

	arrow  shift 83
	.  error


state 56
	FDISKO:  FDISKO FDISKT.EMPTY 
	EMPTY: .    (59)

	.  reduce 59 (src line 266)

	EMPTY  goto 84

state 57
	FDISKT:  hyphen unit.arrow id 

	arrow  shift 85
	.  error


state 58
	FDISKT:  hyphen tpe.arrow id 

	arrow  shift 86
	.  error


state 59
	FDISKT:  hyphen fit.arrow id 

	arrow  shift 87
	.  error


state 60
	FDISKT:  hyphen delete.arrow id 

	arrow  shift 88
	.  error


state 61
	FDISKT:  hyphen add.arrow digit 

	arrow  shift 89
	.  error


state 62
	FDISKT:  hyphen size.arrow digit 

	arrow  shift 90
	.  error


state 63
	FDISKT:  hyphen name.arrow id 

	arrow  shift 91
	.  error


state 64
	FDISKT:  hyphen path.arrow quote route quote 
	FDISKT:  hyphen path.arrow route 

	arrow  shift 92
	.  error


state 65
	MKFS:  mkfs hyphen id.arrow idn 
	MKFS:  mkfs hyphen id.arrow idn hyphen tpe arrow id 

	arrow  shift 93
	.  error


state 66
	READ:  read arrow route.    (15)

	.  reduce 15 (src line 175)


state 67
	REPO:  REPO REPT.EMPTY 
	EMPTY: .    (59)

	.  reduce 59 (src line 266)

	EMPTY  goto 94

state 68
	REPT:  hyphen id.arrow id 

	arrow  shift 95
	.  error


state 69
	REPT:  hyphen name.arrow id 

	arrow  shift 96
	.  error


state 70
	REPT:  hyphen path.arrow quote route quote 
	REPT:  hyphen path.arrow route 

	arrow  shift 97
	.  error


state 71
	REPT:  hyphen ruta.arrow quote route quote 
	REPT:  hyphen ruta.arrow route 

	arrow  shift 98
	.  error


state 72
	MOUNTO:  MOUNTO MOUNTT EMPTY.    (37)

	.  reduce 37 (src line 220)


state 73
	MOUNTT:  hyphen path arrow.quote route quote 

	quote  shift 99
	.  error


state 74
	MOUNTT:  hyphen name arrow.id 

	id  shift 100
	.  error


state 75
	UNMOUNTO:  UNMOUNTO UNMOUNTT EMPTY.    (42)

	.  reduce 42 (src line 231)


state 76
	UNMOUNTT:  hyphen id arrow.id 

	id  shift 101
	.  error


state 77
	EXEC:  exec hyphen path arrow.route 

	route  shift 102
	.  error


state 78
	MKDISKO:  MKDISKO MKDISKT EMPTY.    (19)

	.  reduce 19 (src line 185)


state 79
	MKDISKT:  hyphen size arrow.digit 

	digit  shift 103
	.  error


state 80
	MKDISKT:  hyphen path arrow.route 
	MKDISKT:  hyphen path arrow.quote route quote 

	route  shift 104
	quote  shift 105
	.  error


state 81
	MKDISKT:  hyphen name arrow.diskName 

	diskName  shift 106
	.  error


state 82
	MKDISKT:  hyphen unit arrow.id 

	id  shift 107
	.  error


state 83
	RMDISK:  rmdisk hyphen path arrow.quote route quote 

	quote  shift 108
	.  error


state 84
	FDISKO:  FDISKO FDISKT EMPTY.    (46)

	.  reduce 46 (src line 243)


state 85
	FDISKT:  hyphen unit arrow.id 

	id  shift 109
	.  error


state 86
	FDISKT:  hyphen tpe arrow.id 

	id  shift 110
	.  error


state 87
	FDISKT:  hyphen fit arrow.id 

	id  shift 111
	.  error


state 88
	FDISKT:  hyphen delete arrow.id 

	id  shift 112
	.  error


state 89
	FDISKT:  hyphen add arrow.digit 

	digit  shift 113
	.  error


state 90
	FDISKT:  hyphen size arrow.digit 

	digit  shift 114
	.  error


state 91
	FDISKT:  hyphen name arrow.id 

	id  shift 115
	.  error


state 92
	FDISKT:  hyphen path arrow.quote route quote 
	FDISKT:  hyphen path arrow.route 

	route  shift 117
	quote  shift 116
	.  error


state 93
	MKFS:  mkfs hyphen id arrow.idn 
	MKFS:  mkfs hyphen id arrow.idn hyphen tpe arrow id 

	idn  shift 118
	.  error


state 94
	REPO:  REPO REPT EMPTY.    (27)

	.  reduce 27 (src line 201)


state 95
	REPT:  hyphen id arrow.id 

	id  shift 119
	.  error


state 96
	REPT:  hyphen name arrow.id 

	id  shift 120
	.  error


state 97
	REPT:  hyphen path arrow.quote route quote 
	REPT:  hyphen path arrow.route 

	route  shift 122
	quote  shift 121
	.  error


state 98
	REPT:  hyphen ruta arrow.quote route quote 
	REPT:  hyphen ruta arrow.route 

	route  shift 124
	quote  shift 123
	.  error


state 99
	MOUNTT:  hyphen path arrow quote.route quote 

	route  shift 125
	.  error


state 100
	MOUNTT:  hyphen name arrow id.    (39)

	.  reduce 39 (src line 223)


state 101
	UNMOUNTT:  hyphen id arrow id.    (43)

	.  reduce 43 (src line 233)


state 102
	EXEC:  exec hyphen path arrow route.    (16)

	.  reduce 16 (src line 177)


state 103
	MKDISKT:  hyphen size arrow digit.    (20)

	.  reduce 20 (src line 187)


state 104
	MKDISKT:  hyphen path arrow route.    (21)

	.  reduce 21 (src line 188)


state 105
	MKDISKT:  hyphen path arrow quote.route quote 

	route  shift 126
	.  error


state 106
	MKDISKT:  hyphen name arrow diskName.    (22)

	.  reduce 22 (src line 189)


state 107
	MKDISKT:  hyphen unit arrow id.    (24)

	.  reduce 24 (src line 191)


state 108
	RMDISK:  rmdisk hyphen path arrow quote.route quote 

	route  shift 127
	.  error


state 109
	FDISKT:  hyphen unit arrow id.    (47)

	.  reduce 47 (src line 245)


state 110
	FDISKT:  hyphen tpe arrow id.    (48)

	.  reduce 48 (src line 246)


state 111
	FDISKT:  hyphen fit arrow id.    (49)

	.  reduce 49 (src line 247)


state 112
	FDISKT:  hyphen delete arrow id.    (50)

	.  reduce 50 (src line 248)


state 113
	FDISKT:  hyphen add arrow digit.    (51)

	.  reduce 51 (src line 249)


state 114
	FDISKT:  hyphen size arrow digit.    (52)

	.  reduce 52 (src line 250)


state 115
	FDISKT:  hyphen name arrow id.    (53)

	.  reduce 53 (src line 251)


state 116
	FDISKT:  hyphen path arrow quote.route quote 

	route  shift 128
	.  error


state 117
	FDISKT:  hyphen path arrow route.    (55)

	.  reduce 55 (src line 253)


state 118
	MKFS:  mkfs hyphen id arrow idn.    (57)
	MKFS:  mkfs hyphen id arrow idn.hyphen tpe arrow id 

	hyphen  shift 129
	.  reduce 57 (src line 262)


state 119
	REPT:  hyphen id arrow id.    (28)

	.  reduce 28 (src line 203)


state 120
	REPT:  hyphen name arrow id.    (29)

	.  reduce 29 (src line 204)


state 121
	REPT:  hyphen path arrow quote.route quote 

	route  shift 130
	.  error


state 122
	REPT:  hyphen path arrow route.    (31)

	.  reduce 31 (src line 206)


state 123
	REPT:  hyphen ruta arrow quote.route quote 

	route  shift 131
	.  error


state 124
	REPT:  hyphen ruta arrow route.    (33)

	.  reduce 33 (src line 208)


state 125
	MOUNTT:  hyphen path arrow quote route.quote 

	quote  shift 132
	.  error


state 126
	MKDISKT:  hyphen path arrow quote route.quote 

	quote  shift 133
	.  error


state 127
	RMDISK:  rmdisk hyphen path arrow quote route.quote 

	quote  shift 134
	.  error


state 128
	FDISKT:  hyphen path arrow quote route.quote 

	quote  shift 135
	.  error


state 129
	MKFS:  mkfs hyphen id arrow idn hyphen.tpe arrow id 

	tpe  shift 136
	.  error


state 130
	REPT:  hyphen path arrow quote route.quote 

	quote  shift 137
	.  error


state 131
	REPT:  hyphen ruta arrow quote route.quote 

	quote  shift 138
	.  error


state 132
	MOUNTT:  hyphen path arrow quote route quote.    (38)

	.  reduce 38 (src line 222)


state 133
	MKDISKT:  hyphen path arrow quote route quote.    (23)

	.  reduce 23 (src line 190)


state 134
	RMDISK:  rmdisk hyphen path arrow quote route quote.    (56)

	.  reduce 56 (src line 258)


state 135
	FDISKT:  hyphen path arrow quote route quote.    (54)

	.  reduce 54 (src line 252)


state 136
	MKFS:  mkfs hyphen id arrow idn hyphen tpe.arrow id 

	arrow  shift 139
	.  error


state 137
	REPT:  hyphen path arrow quote route quote.    (30)

	.  reduce 30 (src line 205)


state 138
	REPT:  hyphen ruta arrow quote route quote.    (32)

	.  reduce 32 (src line 207)


state 139
	MKFS:  mkfs hyphen id arrow idn hyphen tpe arrow.id 

	id  shift 140
	.  error


state 140
	MKFS:  mkfs hyphen id arrow idn hyphen tpe arrow id.    (58)

	.  reduce 58 (src line 263)


39 terminals, 25 nonterminals
60 grammar rules, 141/8000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
74 working sets used
memory: parser 43/120000
0 extra closures
121 shift entries, 1 exceptions
34 goto entries
10 entries saved by goto default
Optimizer space used: output 140/120000
140 table entries, 0 zero
maximum spread: 39, maximum offset: 67
